# map2

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  arm-test.sh  daily-driver.py  dev-test.sh  devices.list  driver.by  example.km  example2.km  example3.km  example4.km  f.py  foo.km  keyboard-debug.sh  keyboard.sh  main.km  mouse-debug.sh  mouse-release.sh  mouse.sh  package.sh  release.sh  shell.nix  test-middleware.py  test.py  test.sh  test2.by  test2.py  test3.py  udev-test.sh  udevmon.yaml
.github/: FUNDING.yml
.github/workflows/: CI.yml  deploy.yml  docs.yml  package.yml  release.yml
ci/: generate-pkgbuild.py  prepare-ci-container.sh  prepare-ci-test.sh  prepare-ci.sh
ci/templates/: PKGBUILD
devices/: hybrid.yaml  keyboard.yaml  mouse.yaml
docs/: .gitignore  README.md  astro.config.mjs  package.json  start-automatically.md  tsconfig.json
docs-old/: start-automatically.md
docs/man/: key-mods.1  map2.1
docs/src/: consts.ts  languages.ts
docs/src/components/: HeadCommon.astro  HeadSEO.astro  ValidKeysTable.solid.tsx
docs/src/components/Footer/: AvatarList.astro  Footer.astro
docs/src/components/Header/: AstroLogo.astro  Header.astro  LanguageSelect.tsx  Search.tsx  SidebarToggle.tsx
docs/src/components/LeftSidebar/: LeftSidebar.astro
docs/src/components/PageContent/: PageContent.astro
docs/src/components/RightSidebar/: Example.solid.tsx  MoreMenu.astro  RightSidebar.astro  TableOfContents.tsx  ThemeToggleButton.tsx
docs/src/content/: config.ts
docs/src/content/docs/de/: introduction.mdx  page-2.mdx  page-3.mdx  page-4.mdx
docs/src/content/docs/en/: getting-started.mdx  install.mdx  introduction.mdx  page-2.mdx  page-3.mdx  page-4.mdx
docs/src/content/docs/en/advanced/: autostart.mdx  secure-setup.mdx
docs/src/content/docs/en/api/: chord-mapper.mdx  map2.mdx  mapper.mdx  reader.mdx  text-mapper.mdx  virtual-reader.mdx  virtual-writer.mdx  window.mdx  writer.mdx
docs/src/content/docs/en/basics/: getting-started.mdx  install.mdx  introduction.mdx  keys-and-key-sequences.mdx  routing.mdx
docs/src/content/docs/en/examples/: chords.mdx  hello-world.mdx  keyboard_to_controller.mdx  text-mapping.mdx  text_mapping.mdx  wasd-mouse-control.mdx
docs/src/layouts/: MainLayout.astro
docs/src/pages/: [...slug].astro  index.astro
docs/src/styles/: index.scss  theme.scss
evdev-rs/: .travis.yml  Cargo.toml  README.md  TODO.md  rustfmt.toml
evdev-rs/evdev-sys/: Cargo.toml  build.rs
evdev-rs/evdev-sys/src/: lib.rs
evdev-rs/examples/: evtest.rs
evdev-rs/src/: device.rs  enums.rs  lib.rs  logging.rs  macros.rs  uinput.rs  util.rs
evdev-rs/tests/: all.rs
evdev-rs/tools/: make-enums.sh  make-event-names.py
examples/: README.md  a_to_b.py  active-window.km  active_window.py  chords.py  control-statements.m2  custom_modifier.py  functions.m2  hello_world.py  hjkl-arrow-keys.m2  keyboard_to_controller.py  math.km  math.m2  shiro-daily-driver.m2  text_mapping.py  wasd_mouse_control.py
examples/tests/: a_to_b.rs  chords.rs  control_statements_test.rs  custom_modifier.rs  functions_test.rs  hello_world.rs  hjkl_arrow_keys.test.rs  hjkl_arrow_keys_test.rs  math.test.rs  math_test.rs  mod.rs  text_mapping.rs  wasd_mouse_control.rs
examples/tests/_setup_integration_tests/: setup_integration_tests.rs
pytests/: Cargo.toml
pytests/src/: lib.rs
scripts/: test.sh  test.yaml
src/: block_ext.rs  caps_mod.rs  cli.rs  closure_channel.rs  direction_mapper.rs  encoding.rs  error.rs  event.rs  event_handlers.rs  event_loop.rs  global.rs  ignore_list.rs  key_defs.rs  key_primitives.rs  leftalt_mod.rs  lib.rs  logging.rs  main.rs  mapper.rs  mappings.rs  motion_mapper.rs  multiplexer.rs  node_util.rs  python.rs  python_reader.rs  python_window.rs  python_writer.rs  reader.rs  rightalt_mod.rs  scope.rs  script.rs  state.rs  subscriber.rs  subscriber_map.rs  tab_mod.rs  text_mapper.rs  virtual_reader.rs  virtual_writer.rs  window.rs  writer.rs  (+3 more)
src/capabilities/: mod.rs
src/device/: device-test.rs  device_logging.rs  device_test.rs  device_util.rs  mod.rs  virt_device.rs  virtual_input_device.rs  virtual_output_device.rs
src/evlist/: evlist.rs
src/evsearch/: evsearch.rs
src/man/: man.rs
src/map2devices/: map2devices.rs
src/mapper/: chord_mapper.rs  key_mapper.rs  mapper.rs  mapper_util.rs  mapping_functions.rs  mod.rs  modifier_mapper.rs  suffix_tree.rs  text_mapper.rs
src/messaging/: mod.rs
src/parsing/: action.rs  action_state.rs  assignment.rs  continue_statement.rs  custom_combinators.rs  error.rs  expression.rs  for_loop.rs  function.rs  identifier.rs  if_statement.rs  key.rs  key_action.rs  key_mapping.rs  key_sequence.rs  lambda.rs  mod.rs  motion_action.rs  parser.rs  primitives.rs  public_parsing_api.rs  python.rs  return_statement.rs  variable.rs
src/platform/: mod.rs
src/runtime/: builtin_functions.rs  evaluation.rs  mod.rs
src/test/: mod.rs  script_testing.rs
src/testing/: mod.rs
src/tests/: mod.rs  script_testing.rs
src/udevmon/: mod.rs
src/window/: hyprland_window.rs  mod.rs  window_base.rs  x11_window.rs
test/: test1.km
