[package]
name = "map2"
version = "2.1.1"
authors = ["shiro <shiro@usagi.io>"]
edition = "2021"

[features]
integration = []
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "map2"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
clap = "4.5.3"
evdev-rs = { path = "evdev-rs", features = ["serde"] }
udev = "0.9.0"
futures = "0.3.30"
futures-time = "3.0.0"
input-linux-sys = "0.3.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
libc = "0.2.150"
arc-swap = "1.7.0"
man = "0.3.0"
nom = "7.1.3"
notify = "7.0.0"
regex = "1.10.2"
tap = "1.0.1"
tokio = { version = "1.13.0", features = ["full"] }
unicode-xid = "0.2.4"
walkdir = "2.4.0"
x11rb = "0.7.0"
# hyprland = "0.4.0-alpha.3"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git", rev = "refs/pull/177/head" }
xdg = "2.2.0"
atty = "0.2"
indoc = "1.0"
futures-intrusive = "0.4.0"
pyo3 = { version = "0.22" }
pyo3-async-runtimes = { version = "0.22", features = [
  "attributes",
  "tokio-runtime",
  "testing",
] }
oneshot = "0.1.6"
signal-hook = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
bitflags = "1.3.2"
byteorder = "1.5.0"
tempfile = "3.8.1"
nix = "0.26.4"
thiserror = "1.0.50"
derive-new = "0.7.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
pythonize = { version = "0.22.0" }

# wayland
wayland-client = "0.31.1"
wayland-protocols-misc = { version = "0.2.0", features = [
  "client",
  "wayland-server",
  "wayland-client",
] }
xkeysym = "0.2.0"
unicode-segmentation = "1.10.1"
xkbcommon = { version = "0.7.0", features = ["wayland"] }

[dev-dependencies]
automod = "1.0.13"
pytests = { path = "./pytests" }

[[test]]
name = "integration-tests"
path = "examples/tests/_setup_integration_tests/setup_integration_tests.rs"
harness = false
required-features = ["integration"]
